kube/testnet/testnet-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: testnet-ingress
  namespace: testnet
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "testnet-ingress-static-ip" 
    #Note: there is a waring: Warning: annotation "kubernetes.io/ingress.class" is deprecated, please use 'spec.ingressClassName' instead
    #But if we set the spec.ingressClassName, it do not worked.
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/managed-certificates: "testnet-cert"
spec:
  rules:
  - host: test-faucet.rooch.network
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: testnet-faucet-service
            port: 
              number: 6868
  - host: test2-seed.rooch.network
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rooch-testnet
            port:
              number: 6767
  - host: test-seed.rooch.network
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rooch-testnet
            port:
              number: 6767
---
apiVersion: v1
kind: Service
metadata:
  name: testnet-faucet-service
  namespace: testnet
spec:
  type: NodePort
  ports:
    - port: 6868
      targetPort: 6868
      protocol: TCP
      name: http
  selector:
    app: testnet-faucet
